@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'active' attribute to hub
+
 1.302047  2016-07-22 22:36:29-07:00 America/Los_Angeles
 
     - No Changes from last trial
